# rs-grpc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-gateway  Makefile  app-gw.yaml  app.yaml  build.rs  go.mod  readme.md
clients/go/: client.go
clients/go/pb/: hello.pb.go  hello.pb.gw.go  hello_grpc.pb.go
clients/nodejs/: hello.js
clients/nodejs/pb/: hello_grpc_pb.js
gateway/: app.rs  main.rs
gateway/infras/: logger.rs  metrics.rs  mod.rs
gateway/rust_grpc/: hello.rs
proto/: hello.proto
src/: app.rs  main.rs  multiplex_server.rs
